--- a/css/main.css
+++ b/css/main.css
@@ -32,5 +32,8 @@ html {
 .banner-content {
   position: absolute;
   color: #fff;
-  bottom: 1rem;
+  left: 0;
+  width: 100%;
+  max-height: 20em;
+  bottom: 0;
 }
